some integrationTests for user create and getById feature
