# service/src/main/resources/api.yml
@@ -121,6 +121,57 @@ paths:
         404:
           description: 'Not Found'
 
+    put:
+      summary: 'Updates User data'
+      operationId: updateUser
+      tags:
+        - user
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: id of the task
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUserDTO'
+        required: true
+      responses:
+        204:
+          description: 'Updated Successfully'
+        404:
+          description: 'Not Found'
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+
+  /users/{id}:
+    get:
+      summary: 'Return an User by ID'
+      operationId: getUser
+      tags:
+        - user
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the user
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: 'OK'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        404:
+          description: Not Found
+
 components:
   schemas:
     UpdateTaskDTO:
